Fix hero video alignment to top to remove black strip

--- a/style.css
+++ b/style.css
@@ -339,7 +339,7 @@ ul { list-style: none; }
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: center 30%;
+    object-position: center top;
     display: block;
 }
 
